# obsidian-qdrant-search

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/agents/: doc-manager.md
.claude/commands/: vault-search.md
.claude/skills/vault-search/: SKILL.md
scripts/: install-mcp.sh
src/vault_search/: __init__.py  __main__.py  cli.py  config.py  indexer.py  migrate.py  path_utils.py  qdrant.py  server.py  vault_ops.py
tests/: test_indexer.py  test_lint.py  test_log.py  test_migrate.py  test_path_utils.py  test_vault_ops.py
