[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsidian-qdrant-search"
version = "0.4.3"
description = "MCP server for semantic search and file management over Obsidian vaults using Qdrant and local embeddings"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Marco Oliveri" },
]
readme = "README.md"
keywords = ["obsidian", "qdrant", "semantic-search", "mcp", "embeddings", "vector-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "qdrant-client>=1.7.0",
    "fastembed>=0.8.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Marco-O94/obsidian-qdrant-search"
Repository = "https://github.com/Marco-O94/obsidian-qdrant-search"
Issues = "https://github.com/Marco-O94/obsidian-qdrant-search/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vault_search"]

[project.scripts]
obsidian-qdrant-search = "vault_search.server:main"
vault-index = "vault_search.cli:index_cli"
vault-search-search = "vault_search.cli:search_cli"
vault-search-read = "vault_search.cli:read_cli"
vault-search-write = "vault_search.cli:write_cli"
vault-search-lint = "vault_search.cli:lint_cli"
vault-search-log = "vault_search.cli:log_cli"
vault-search-map = "vault_search.cli:map_cli"
vault-search-migrate = "vault_search.cli:migrate_cli"
